tests/ui/rename/rename_verify_format.stderr
error: missing `{}`
 --> $DIR/rename_verify_format.rs:7:33
  |
7 |     #[shorthand(rename(format = "def"))]
  |                                 ^^^^^

error: invalid character in format string `#` at position 1
  --> $DIR/rename_verify_format.rs:17:30
   |
17 |     #[shorthand(rename(get = "#pqr_{}", set = "{}#_", try_set = "abc@", get_mut = "trä_pöe"))]
   |                              ^^^^^^^^^

error: invalid character in format string `#` at position 3
  --> $DIR/rename_verify_format.rs:17:47
   |
17 |     #[shorthand(rename(get = "#pqr_{}", set = "{}#_", try_set = "abc@", get_mut = "trä_pöe"))]
   |                                               ^^^^^^

error: invalid character in format string `@` at position 4
  --> $DIR/rename_verify_format.rs:17:65
   |
17 |     #[shorthand(rename(get = "#pqr_{}", set = "{}#_", try_set = "abc@", get_mut = "trä_pöe"))]
   |                                                                 ^^^^^^

error: invalid character in format string `ä` at position 3
  --> $DIR/rename_verify_format.rs:17:83
   |
17 |     #[shorthand(rename(get = "#pqr_{}", set = "{}#_", try_set = "abc@", get_mut = "trä_pöe"))]
   |                                                                                   ^^^^^^^^^

error: invalid character in format string `ö` at position 6
  --> $DIR/rename_verify_format.rs:17:83
   |
17 |     #[shorthand(rename(get = "#pqr_{}", set = "{}#_", try_set = "abc@", get_mut = "trä_pöe"))]
   |                                                                                   ^^^^^^^^^
